--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,7 @@
    "options_page": "options.html",
    "permissions": [
       "tabs",
-      "scrispting",
+      "scripting",
       "activeTab",
       "storage"
    ],
